--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.562.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
